# FaceRenderingProgram

./: CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.39CBF58801EFAB33.idx  _vectorize.hpp.94261AA16F3CC9C0.idx  camera.cpp.B83C8BAADCD652B1.idx  camera.h.87E7C662651160B1.idx  common.hpp.85278A32DF5315C0.idx  compute_common.hpp.31D62A376C66FCE3.idx  compute_vector_decl.hpp.D77EBCD336AABB30.idx  compute_vector_relational.hpp.C8C7D4A5783FADBA.idx  constants.hpp.079AFFBC08260A21.idx  constants.inl.984722175B57DDE5.idx  epsilon.hpp.2C5809694F030463.idx  epsilon.inl.340B9FBF771631A7.idx  exponential.hpp.D5485F87A420B1EE.idx  func_common.inl.CB7753428130132B.idx  func_exponential.inl.4A95B2BC1AD71038.idx  func_geometric.inl.310DBA754AA4396C.idx  func_integer.inl.58D23456B245652C.idx  func_matrix.inl.BCF7BC51649CFBCE.idx  func_packing.inl.D24D5E97BFC155C1.idx  func_trigonometric.inl.77AB7A7AB61BFD40.idx  func_vector_relational.inl.23F9814F23B28F18.idx  fwd.hpp.DB0BA353E084AC53.idx  geometric.hpp.BFB248D200F86F35.idx  glew.h.DE630FF3A96A84E6.idx  glfw3.h.51F009E691C3DE24.idx  glm.hpp.E85CFDE05B53DAFC.idx  integer.hpp.E13627A511D81863.idx  main.cpp.ED97556AA66C40DF.idx  mat2x2.hpp.5AD32951838E56D5.idx  mat2x3.hpp.69A63EFB95119BA8.idx  mat2x4.hpp.6930C9A2D3260E4F.idx  mat3x2.hpp.F3E80CB231E522EA.idx  mat3x3.hpp.34A04DDF7697913F.idx  (+161 more)
renderer/: CMakeLists.txt
renderer/shaders/: fragment.glsl  vertex.glsl
renderer/src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
src/: face_detection.py  main.py  mesh_processing.py
